update in success modal to fix spacing for modal title text

--- a/tethysapp/hydroshare_resource_creator/public/css/main.css
+++ b/tethysapp/hydroshare_resource_creator/public/css/main.css
@@ -163,6 +163,10 @@ tr.shown td.details-control {
 
 .dataTables_filter, .dataTables_info, .dataTables_length, .dataTables_paginate {display: none;}
 
+#modal-resource-dialog-title {
+    margin-right:100px;
+}
+
 /*
     -webkit-transform: translateX(0);
     -moz-transform: translateX(0);
